--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+body {
+  
+  background:#2F363F;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #ffffff;
+  font-family: Roboto;
+  margin-top: 20px;
+  font-weight: bolder;
+  font-size: 30px;
+  cursor: default;
+  
+  
+}
+.title:hover {
+  transform: rotateX(35deg), translateY(-50%); }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.box:hover{
+  background-color: aqua;
+  transform: scale(2);
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.turns{
+  color: #6ab04c;
+  margin-top: px;
+  margin-bottom: 40px;
+  font-weight: bolder;
+  cursor: default
+}
+
+.box {
+  background-color: #ffffff;
+  outline: 0;
+  width: auto;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  
+}
+h1.win{
+  font-weight: bolder;
+}
+
+.box:hover{
+  background-color:#6ab04c;
+  transform: scale(1.09);
+  border-radius: 10px;
+  border: none;
+  transition: all .1s ease-in-out;
+  cursor: pointer;
+}
+.button{
+  margin-top: 10px;
+}
+.Icon {
+  font-size: 45px;
+  color: #ffffff;
+}
+
+.git{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
